horizontal scroll fixed

--- a/assets/style/difference.scss
+++ b/assets/style/difference.scss
@@ -5,7 +5,7 @@
 }
 
 .difference {
-  width: 100vw;
+  width: 98.9vw;
 
   &__header {
     text-align: center;
